--- a/sty.css
+++ b/sty.css
@@ -19,15 +19,6 @@ color: blue;
     align-items: center;
 
 }
-.botonesEncriptadores:hover{
-    box-shadow: 10px 10px 30px 15px;
-     margin: 30px;
-    display: flex;
-    justify-content: space-around;
-    border-radius: 20px ;
-    align-items: center;
-    background: black;
-}
  .showText{
      margin: 20px;
  }
@@ -156,23 +147,18 @@ background: url(imagenes/muñeco.png);
 
 }
 .botonesEncriptadores{
-    width: auto;
+    display:inline-block;
+    width: 250px;
 }
 .input-texto{
     width: 80%;
+    display:inline-block;
+
 }
 .mensaje,{
-   width:  50%;}
+   width:  50%;
+}
 .showText,.table,.seccion1Botones,.botones,.botonSpace{
 width:auto;
-}
-.botonesEncriptadores:hover{
-    box-shadow: 10px 10px 30px 15px;
-     margin: 0px;
-    display: flex;
-    justify-content: space-around;
-    border-radius: 20px ;
-    align-items: center;
-    background: black;
 }
 }
