--- a/sty.css
+++ b/sty.css
@@ -1,3 +1,6 @@
+
+
+
 .principal{
     margin: 10px;
     border: solid 5px;
@@ -161,9 +164,11 @@ background: url(imagenes/muñeco.png);
 .input-texto{
     width: 80%;
 }
-.mensaje,{
-   width:  50%;}
+.mensaje{
+   width:  50%;
+}
 .showText,.table,.seccion1Botones,.botones,.botonSpace{
 width:auto;
 }
 }
+
